--- a/css/main.css
+++ b/css/main.css
@@ -425,11 +425,14 @@ body {
   display: none;
 }
 
-.contacts {
-  display: none;
+@media screen and (max-width: 767px) {
+  .contacts {
+    display: none;
+  }
 }
 
 .burger-btn {
+  margin-left: auto;
   background-color: transparent;
   border: none;
   padding: 0;
@@ -448,7 +451,6 @@ body {
 
 .header-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -568,6 +570,7 @@ body {
   line-height: 1.22;
 }
 
+/*768 */
 @media screen and (min-width: 768px) {
   .mobile-menu {
     display: none;
@@ -592,30 +595,34 @@ body {
     align-items: center;
   }
   .header__logo {
-    margin-right: 93px;
+    margin-right: 88px;
   }
   .menu__item:not(:first-child) {
     margin-left: 50px;
   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contact__item:not(:first-child) {
-    margin-left: 30px;
+    margin-top: 10px;
   }
+}
+
+@media screen and (min-width: 768px) {
   .contacts {
-    /* display: flex; */
-    align-items: center;
     margin-left: auto;
   }
   .menu__link,
   .contact__link {
+    font-size: 14px;
+    color: var(--quaternary-color);
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    line-height: 1.14;
     display: flex;
     align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--quaternary-color);
     position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -645,6 +652,15 @@ body {
     color: var(--fifth-color);
     fill: var(--fifth-color);
   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact__link {
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .email__icon {
     width: 16px;
     height: 12px;
@@ -654,6 +670,25 @@ body {
     width: 10px;
     height: 16px;
     margin-right: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+    font-size: 26px;
+    line-height: 1.19;
+  }
+  .contacts {
+    display: flex;
+    align-items: center;
+  }
+  .contact__item {
+    margin-top: 0;
+  }
+  .contact__item:not(:first-child) {
+    margin-left: 30px;
   }
 }
 
