--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -30,10 +30,13 @@
 }
 
 .contacts {
-    display: none;
+    @media screen and (max-width: 767px) {
+        display: none;
+    }
 }
 
 .burger-btn {
+    margin-left: auto;
     background-color: transparent;
     border: none;
     padding: 0;
@@ -52,7 +55,6 @@
 
 .header-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 .header {
@@ -145,6 +147,8 @@
 .mobile-menu-social-link {
     @include font-source(18px, var(--accent-color), 500, 0.02em, 1.22);
 }
+
+/*768 */
 @media screen and (min-width: 768px) {
     .mobile-menu {
         display: none;
@@ -169,7 +173,7 @@
         align-items: center;
     }
     .header__logo {
-        margin-right: 93px;
+        margin-right: 88px;
     }
 
     .menu__item {
@@ -177,27 +181,23 @@
             margin-left: 50px;
         }
     }
-    .contact__item {
-        &:not(:first-child) {
-            margin-left: 30px;
+    @media screen and (max-width: 1199px) {
+        .contact__item {
+            &:not(:first-child) {
+                margin-top: 10px;
+            }
         }
     }
     .contacts {
-        /* display: flex; */
-        align-items: center;
         margin-left: auto;
     }
     .menu__link,
     .contact__link {
+        @include font-source(14px, var(--quaternary-color), 500, 0.02em, 1.14);
         display: flex;
         align-items: center;
         padding-top: 32px;
         padding-bottom: 32px;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
-        color: var(--quaternary-color);
         position: relative;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
             fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -228,6 +228,10 @@
     .contact__link {
         color: var(--fifth-color);
         fill: var(--fifth-color);
+
+        @media screen and (max-width: 1199px) {
+            padding: 0;
+        }
     }
 
     .email__icon {
@@ -239,6 +243,24 @@
         width: 10px;
         height: 16px;
         margin-right: 10px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .logo {
+        padding-top: 24px;
+        padding-bottom: 25px;
+        font-size: 26px;
+        line-height: 1.19;
+    }
+    .contacts {
+        display: flex;
+        align-items: center;
+    }
+    .contact__item {
+        margin-top: 0;
+        &:not(:first-child) {
+            margin-left: 30px;
+        }
     }
 }
 /* .header {
