--- a/css/main.css
+++ b/css/main.css
@@ -490,6 +490,9 @@ body {
 }
 
 .mobile-menu__container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   position: relative;
   padding-top: 48px;
   padding-bottom: 48px;
@@ -523,7 +526,7 @@ body {
 }
 
 .mobile-menu-contacts {
-  margin-top: 302px;
+  margin-top: auto;
   margin-bottom: 64px;
 }
 
@@ -554,6 +557,7 @@ body {
 .mobile-menu-social-list {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .mobile-menu-social-item:not(:last-child) {
@@ -784,28 +788,48 @@ body {
     margin-right: 10px;
 } */
 .hero {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/bg-mobile.jpg);
   background-size: cover;
   background-color: var(--sixth-color);
   padding-top: 118px;
   padding-bottom: 118px;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 1600px;
 }
 
-@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media screen and (max-width: 479px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/bg-mobile@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/bg-mobile.jpg);
+  }
+}
+
+@media screen and (max-width: 479px) and (min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min-resolution: 192dpi), screen and (max-width: 479px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/bg-mobile@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/bg-tablet.jpg);
+  }
+}
+
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/bg-tablet@2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/bg-tablet.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/bg-desktop.jpg);
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/bg-tablet@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/bg-desktop@2x.jpg);
   }
 }
 
@@ -813,13 +837,6 @@ body {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/bg-desktop.jpg);
-  }
-}
-
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-  .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/bg-desktop@2x.jpg);
   }
 }
 
@@ -1239,15 +1256,13 @@ body {
     display: flex;
     align-items: baseline;
     flex-wrap: wrap;
+    justify-content: center;
   }
   .box-social-link {
     margin-left: 165px;
   }
   .form-footer {
     margin-bottom: 60px;
-  }
-  .box-logo-address {
-    margin-left: 61px;
   }
   .form__input-footer {
     width: 450px;
