--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -93,6 +93,9 @@
 }
 
 .mobile-menu__container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     position: relative;
     padding-top: 48px;
     padding-bottom: 48px;
@@ -119,7 +122,7 @@
     }
 }
 .mobile-menu-contacts {
-    margin-top: 302px;
+    margin-top: auto;
     margin-bottom: 64px;
 }
 .mobile-menu-contacts-item:not(:first-child) {
@@ -138,6 +141,7 @@
 .mobile-menu-social-list {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 .mobile-menu-social-item:not(:last-child) {
     border-right: 1px solid rgba(33, 33, 33, 0.2);
