--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -83,6 +83,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 
     @media screen and (min-width: 1200px) {
         font-size: 14px;
