--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -6,6 +6,7 @@
     background-position: center;
     background-repeat: no-repeat;
     max-width: 1600px;
+    margin: 0 auto;
     @media screen and (max-width: 479px) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
             url(../images/hero/bg-mobile.jpg);
